Days 13 and 14.
A Star implementation needs work.